Replaced files for website, carrd, about.me and instructables icons for some nicer looking ones. Added paragraph below main header for info to add later, and fixed spacing inconsistencies with icons.

--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -5,6 +5,7 @@
 $header-main: util.rem(64);
 $header-sub: util.rem(48);
 $card: util.rem(20);
+$paragraph: util.rem(24);
 
 
 // Shared sizes
